--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,11 +3,21 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url = "https://plugins.gradle.org/m2/"
+        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath ("gradle.plugin.com.google.cloud.artifactregistry:artifactregistry-gradle-plugin:2.1.4")
+
+        classpath('com.google.guava:guava') {
+            version {
+                strictly '31.0.1-jre'
+            }
+        }
     }
 }
 
@@ -15,6 +25,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://asia-south1-maven.pkg.dev/excellent-math-274709/android-sdk-vc"
+        }
     }
 }
 
